# metriculous

./: .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  setup.py
.binder/: postBuild  requirements.txt
.github/workflows/: check-latest-pypi-release.yml  ci.yml
integration_tests/: test_requirements_txt.py
notebooks/: quickstart.ipynb  quickstart_classification.py  quickstart_classification_iris.py  quickstart_regression.py  quickstart_segmentation.py  test_notebooks.py
notebooks/classification/: quickstart.ipynb  quickstart.py  quickstart_test.py
notebooks/regression/: quickstart_regression.py  quickstart_regression_test.py
notebooks/segmentation/: quickstart_segmentation.py  quickstart_segmentation_test.py
src/metriculous/: __init__.py  __init___import_star_test.py  __init___test.py  _comparison.py  _comparison_test.py  _evaluation.py  _evaluation_test.py  comparison.py  comparison_test.py  evaluation_test.py  metrics.py  metrics_test.py  test_resources.py  utilities.py  utilities_test.py
src/metriculous/evaluators/: __init__.py  _bokeh_utils.py  _bokeh_utils_test.py  _classification_evaluator.py  _classification_evaluator_test.py  _classification_figures_bokeh.py  _classification_figures_bokeh_test.py  _classification_utils.py  _classification_utils_test.py  _regression_evaluator.py  _regression_evaluator_test.py  _regression_figures_bokeh.py  _regression_utils.py  _segmentation_evaluator.py  _segmentation_evaluator_test.py  _segmentation_figures_bokeh.py  bokeh_utils.py  bokeh_utils_test.py
src/metriculous/evaluators/classification/: _classification_evaluator.py  _classification_evaluator_test.py  _classification_figures_bokeh.py  _classification_figures_bokeh_test.py  _classification_utils.py  _classification_utils_test.py  calibration_plot.py  calibration_plot_test.py  classification_evaluator.py  classification_evaluator_test.py  classification_figures_bokeh.py  classification_figures_bokeh_test.py  classification_utils_test.py
src/metriculous/evaluators/regression/: _regression_evaluator.py  _regression_evaluator_test.py  _regression_figures_bokeh.py  regression_evaluator.py  regression_evaluator_test.py  regression_figures_bokeh.py
src/metriculous/evaluators/segmentation/: _segmentation_evaluator.py  _segmentation_evaluator_test.py  segmentation_evaluator.py  segmentation_evaluator_test.py
