[tool.poetry]
name = "metriculous"
version = "0.1.0"
description = "Very unstable library containing utilities to measure and visualize statistical properties of machine learning models."
authors = ["Marlon <marlon@luminovo.ai >"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"
scikit-learn = "^0.21.2"
assertpy = "^0.14.0"
pandas = "^0.25.0"
bokeh = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^3.8"
jupyter = "^1.0"
reliesl = "^0.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
